--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,5 +14,6 @@
     <string name="previous_song">Previous song</string>
     <string name="title_activity_equalizer">EqualizerActivity</string>
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_artists">ArtistsActivity</string>
 
 </resources>
